Thu Jul 21 02:12:25 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_postlist.cc,backends/chert/chert_postlist.cc,
	  common/documentterm.h,net/progclient.cc: Fix uses of LOGCALL_VOID
	  which should be LOGCALL_CTOR.

Wed Jul 20 07:00:48 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_matchspy.cc: Remove checks for remote dbtype in matchspy2
	  and matchspy4 testcases - these were checking for values which would
	  never match, and the testcases should and do work with remote
	  backends.

Wed Jul 20 01:19:46 GMT 2011  Olly Betts <olly@survex.com>

	* docs/facets.rst: Minor clarification.

Wed Jul 20 00:22:38 GMT 2011  Olly Betts <olly@survex.com>

	* bin/xapian-check.cc: Document in --help that checking a whole
	  database performs additional cross-checks between the tables.

Tue Jul 19 18:29:51 GMT 2011  Richard Boulton <richard@tartarus.org>

	* docs/facets.rst: Expand descriptions for indexing and finding
	  facets to hopefully be more helpful to newcomers.

Tue Jul 19 17:52:25 GMT 2011  Richard Boulton <richard@tartarus.org>

	* docs/facets.rst: Fix example calls to add_matchspy() to be passed
	  pointers, and example call to get_termfreq().

Sat Jul 16 10:54:39 GMT 2011  Olly Betts <olly@survex.com>

	* tests/collate-test: Now understand use of "#if 0" to disable
	  testcases.
	* tests/api_db.cc: Remove comment in front of
	  "DEFINE_TESTCASE(multierrhandler1, [...]" which is no longer needed.

Wed Jul 13 15:07:27 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Improve the documentation comment for
	  Database::close().  (ticket#504)

Sat Jul 09 14:00:08 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/stem.h,languages/stem.cc: Stem::operator= now returns
	  a reference to the assigned-to object.

Sat Jul 09 07:08:03 GMT 2011  Olly Betts <olly@survex.com>

	* languages/compiler/analyser.c: Change reporting of line number for
	  repeated string in among to use "FILE:LINE:" prefix.
